--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         <h2 class="section__title">About Me</h2>
 
         <div class="about__container container grid">
-          <img src="./assets/img/about.png" alt="" class="about__img" />
+          <img src="./assets/img/about-1.jpg" alt="" class="about__img" />
 
           <div class="about__data">
             <div class="about__info">
@@ -273,7 +273,7 @@
                   <i class="bx bxs-badge-check"></i>
 
                   <div>
-                    <h3 class="skills__name">Git</h3>
+                    <h3 class="skills__name">Tailwind</h3>
                     <span class="skills__level">Intermediate</span>
                   </div>
                 </div>
@@ -289,7 +289,7 @@
                   <i class="bx bxs-badge-check"></i>
 
                   <div>
-                    <h3 class="skills__name">PHP</h3>
+                    <h3 class="skills__name">Python</h3>
                     <span class="skills__level">Intermediate</span>
                   </div>
                 </div>
@@ -307,7 +307,7 @@
                   <i class="bx bxs-badge-check"></i>
 
                   <div>
-                    <h3 class="skills__name">Python</h3>
+                    <h3 class="skills__name">Express Js</h3>
                     <span class="skills__level">Intermediate</span>
                   </div>
                 </div>
@@ -327,7 +327,7 @@
                   <i class="bx bxs-badge-check"></i>
 
                   <div>
-                    <h3 class="skills__name">Firebase</h3>
+                    <h3 class="skills__name">Django</h3>
                     <span class="skills__level">Intermediate</span>
                   </div>
                 </div>
@@ -683,7 +683,7 @@
               <div class="contact__card">
                 <i class="bx bx-mail-send contact__card-icon"></i>
                 <h3 class="contact__card-title">Email</h3>
-                <span class="contact__card-data">shakebshamsi@hotmail.com</span>
+                <span class="contact__card-data">info.shakeb@.com</span>
 
                 <a
                   href="mailto: shakebshamsi@hotmail.com"
@@ -698,7 +698,7 @@
               <div class="contact__card">
                 <i class="bx bxl-whatsapp contact__card-icon"></i>
                 <h3 class="contact__card-title">Whatsapp</h3>
-                <span class="contact__card-data">+91 8826038099</span>
+                <span class="contact__card-data">+91 882603XXXX</span>
 
                 <a
                   href="https://api.whatsapp.com/send?phone=+918826038099&text=Hello, more information!"
@@ -820,7 +820,7 @@
         </ul>
 
         <span class="footer__copy">
-          &#169; Al-Shakeb. All rigths reserved
+          &#169; Shakeb Shamsi. All rigths reserved
         </span>
       </div>
     </footer>
