--- a/index.html
+++ b/index.html
@@ -683,7 +683,7 @@
               <div class="contact__card">
                 <i class="bx bx-mail-send contact__card-icon"></i>
                 <h3 class="contact__card-title">Email</h3>
-                <span class="contact__card-data">info.shakeb@.com</span>
+                <span class="contact__card-data">info.shakeb@gmail.com</span>
 
                 <a
                   href="mailto: shakebshamsi@hotmail.com"
@@ -731,7 +731,7 @@
             <h3 class="contact__title">Write me your project</h3>
 
             <form
-              action="https://formsubmit.co/shakebshamsi@hotmail.com"
+              action="https://formsubmit.co/info.shakeb@gmail.com"
               method="POST"
               class="contact__form"
             >
