--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <!--=============== FAVICON ===============-->
     <link
       rel="shortcut icon"
-      href="./favicon/android-chrome-512x512.png "
+      href="./favicon/favicon-1.png "
       type="image/x-icon"
     />
 
