FIX: Project Fiter typo and Testimonal behaviour

--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
             <div class="work__filters">
                <span class="work__item active-work" data-filter="all">All</span>
                <span class="work__item" data-filter=".web">Web</span>
-               <span class="work__item" data-filter=".movil">Movil</span>
+               <span class="work__item" data-filter=".Mobile">Mobile</span>
                <span class="work__item" data-filter=".design">Design</span>
             </div>
 
@@ -537,10 +537,10 @@
                   </a>
                </div>
 
-               <div class="work__card mix movil">
+               <div class="work__card mix Mobile">
                   <img src="./assets/img/work2.jpg" alt="" class="work__img" />
 
-                  <h3 class="work__title">App Movil</h3>
+                  <h3 class="work__title">Mobile App</h3>
 
                   <a href="#" class="work__button">
                      Demo <i class="bx bx-right-arrow-alt work__icon"></i>
@@ -567,10 +567,10 @@
                   </a>
                </div>
 
-               <div class="work__card mix movil">
+               <div class="work__card mix Mobile">
                   <img src="./assets/img/work5.jpg" alt="" class="work__img" />
 
-                  <h3 class="work__title">App Movil</h3>
+                  <h3 class="work__title">Mobile App</h3>
 
                   <a href="#" class="work__button">- Demo <i class="bx bx-right-arrow-alt work__icon"></i>
                   </a>
@@ -589,12 +589,21 @@
          </section>
 
          <!--=============== TESTIMONIALS ===============-->
-         <section class="testimonial section" id="testimonial">
+         <!-- <section class="testimonial section" id="testimonial">
             <span class="section__subtitle">My clients say</span>
             <h2 class="section__title">Testimonial</h2>
 
             <div class="testimonial__container container swiper">
                <div class="swiper-wrapper">
+                  <div class="testimonial__card swiper-slide">
+                     <img src="./assets/img/tazheeb_img1.png" alt="" class="testimonial__img" />
+
+                     <h3 class="testimonial__name">Tazheeb Shamsi</h3>
+                     <p class="testimonial__description">
+                        A really good job, all aspects of the project were followed step
+                        by step and with good results.
+                     </p>
+                  </div>
                   <div class="testimonial__card swiper-slide">
                      <img src="./assets/img/testimonial1.png" alt="" class="testimonial__img" />
 
@@ -626,14 +635,88 @@
                   </div>
 
                   <div class="testimonial__card swiper-slide">
-                     <img src="./assets/img/testimonial4.jpg" alt="" class="testimonial__img" />
+                     <img src="./assets/img/tausif_img.jpeg" alt="" class="testimonial__img" />
 
-                     <h3 class="testimonial__name">Kritika Aggarwal</h3>
+                     <h3 class="testimonial__name">Tausif Ahmad</h3>
                      <p class="testimonial__description">
                         Shakeb is still better than upwork, because Shakeb was holding
                         experience talented users that can trust.
                      </p>
                   </div>
+
+                  <div class="testimonial__card swiper-slide">
+                     <img src="./assets/img/Fiayazuddin_img.jpeg" alt="" class="testimonial__img" />
+
+                     <h3 class="testimonial__name">Tausif Ahmad</h3>
+                     <p class="testimonial__description">
+                        Shakeb is still better than upwork, because Shakeb was holding
+                        experience talented users that can trust.
+                     </p>
+                  </div>
+               </div>
+               <div class="swiper-pagination"></div>
+            </div>
+         </section> -->
+         <section class="testimonial section" id="testimonial">
+            <span class="section__subtitle">My clients say</span>
+            <h2 class="section__title">Testimonial</h2>
+
+            <div class="testimonial__container container swiper">
+               <div class="swiper-wrapper">
+
+                  <div class="testimonial__card swiper-slide">
+                     <img src="./assets/img/tazheeb_img.png" alt="" class="testimonial__img" />
+                     <h3 class="testimonial__name">Tazheeb Shamsi</h3>
+                     <p class="testimonial__description">
+                        Shakeb consistently delivers top-quality work and always exceeds expectations. Very professional
+                        throughout.
+                     </p>
+                  </div>
+
+                  <div class="testimonial__card swiper-slide">
+                     <img src="./assets/img/testimonial1.png" alt="" class="testimonial__img" />
+                     <h3 class="testimonial__name">Peter Parker</h3>
+                     <p class="testimonial__description">
+                        Working with Shakeb was smooth and efficient. He understood the requirements quickly and
+                        delivered on time.
+                     </p>
+                  </div>
+
+                  <div class="testimonial__card swiper-slide">
+                     <img src="./assets/img/testimonial2.png" alt="" class="testimonial__img" />
+                     <h3 class="testimonial__name">Helen Tokhi</h3>
+                     <p class="testimonial__description">
+                        Shakeb’s platform is a gem — it connects you with trustworthy, skilled professionals without the
+                        hassle.
+                     </p>
+                  </div>
+
+                  <div class="testimonial__card swiper-slide">
+                     <img src="./assets/img/testimonial3.png" alt="" class="testimonial__img" />
+                     <h3 class="testimonial__name">Sara Jensen</h3>
+                     <p class="testimonial__description">
+                        His attention to detail and creative problem-solving made my project shine. Highly recommended!
+                     </p>
+                  </div>
+
+                  <div class="testimonial__card swiper-slide">
+                     <img src="./assets/img/tausif_img.jpeg" alt="" class="testimonial__img" />
+                     <h3 class="testimonial__name">Tausif Ahmad</h3>
+                     <p class="testimonial__description">
+                        I’ve worked with many developers, but Shakeb stands out with his reliability and innovative
+                        thinking.
+                     </p>
+                  </div>
+
+                  <div class="testimonial__card swiper-slide">
+                     <img src="./assets/img/Fiayazuddin_img.jpeg" alt="" class="testimonial__img" />
+                     <h3 class="testimonial__name">Fiayazuddin Khan</h3>
+                     <p class="testimonial__description">
+                        The end result was exactly what I had envisioned. Shakeb transformed our ideas into a working
+                        solution flawlessly.
+                     </p>
+                  </div>
+
                </div>
                <div class="swiper-pagination"></div>
             </div>
