--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <div class="home__container container grid">
                <div class="home__data">
                   <span class="home__greeting">Hello, I'm</span>
-                  <h1 class="home__name">Shakeb Shamsi</h1>
+                  <h1 class="home__name">Shakeb Shamsiii</h1>
                   <h3 class="home__education">Full Stack Developer</h3>
 
                   <div class="home__buttons">
