FIX: Skills Section

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 
    <body>
       <!--=============== HEADER ===============-->
+
       <header class="header" id="header">
          <nav class="nav container">
             <a href="" class="nav__logo">Shakeb</a>
@@ -98,11 +99,14 @@
             <i class="bx bx-moon change-theme" id="theme-button"></i>
          </nav>
       </header>
-      <!-- Theme Gear & Color Switcher -->
+
+      <!--=============== Theme Gear & Color Switcher ===============-->
+
       <div class="theme-container">
          <div class="gear-toggle" id="gearToggle">
             <i class="fas fa-cog"></i>
          </div>
+
          <div class="color-switcher" id="colorSwitcher">
             <h4>Color Switcher</h4>
             <hr>
@@ -118,13 +122,13 @@
                <span class="color" data-hue="115" style="background-color: hsl(115 51% 68%)"></span>
                <span class="color" data-hue="35" style="background-color: hsl(35, 100%, 54%)"></span>
             </div>
-            </div>
          </div>
       </div>
 
       <!--=============== MAIN ===============-->
       <main class="main">
          <!--=============== HOME ===============-->
+
          <section class="home section" id="home">
             <div class="home__container container grid">
                <div class="home__data">
@@ -166,6 +170,7 @@
          </section>
 
          <!--=============== ABOUT ===============-->
+
          <section class="about section" id="about">
             <span class="section__subtitle">My Intro</span>
             <h2 class="section__title">About Me</h2>
@@ -194,14 +199,154 @@
                      </div>
                   </div>
                   <p class="about__description">
-                     I build dynamic and responsive web applications with expertise in Frontend (HTML, CSS, JavaScript, React, Tailwind, Bootstrap) and Backend (Python,Django, Node.js, Express.js, No SQL and SQL databases). I create seamless user interfaces and robust back-end systems, delivering high-quality solutions that meet client needs.
+                     I build dynamic and responsive web applications with expertise in Frontend (HTML, CSS, JavaScript,
+                     React, Tailwind, Bootstrap) and Backend (Python,Django, Node.js, Express.js, No SQL and SQL
+                     databases). I create seamless user interfaces and robust back-end systems, delivering high-quality
+                     solutions that meet client needs.
                   </p>
                   <a href="#contact" class="button">Contact Me</a>
                </div>
             </div>
          </section>
 
+         <!--=============== SKILLS ===============-->
+
+         <section class="skills section" id="skills">
+            <span class="section__subtitle">My abilities</span>
+            <h2 class="section__title">My Experience</h2>
+
+            <div class="skills__container container grid">
+               <div class="skills__content">
+                  <h3 class="skills__title">Frontend Developer</h3>
+
+                  <div class="skills__box">
+                     <div class="skills__group">
+                        <div class="skills__data">
+                           <i class="bx bxs-badge-check"></i>
+
+                           <div>
+                              <h3 class="skills__name">HTML</h3>
+                              <span class="skills__level">Basic</span>
+                           </div>
+                        </div>
+
+                        <div class="skills__data">
+                           <i class="bx bxs-badge-check"></i>
+
+                           <div>
+                              <h3 class="skills__name">CSS</h3>
+                              <span class="skills__level">Advanced</span>
+                           </div>
+                        </div>
+
+                        <div class="skills__data">
+                           <i class="bx bxs-badge-check"></i>
+
+                           <div>
+                              <h3 class="skills__name">JavaScript</h3>
+                              <span class="skills__level">Intermediate</span>
+                           </div>
+                        </div>
+                     </div>
+
+                     <div class="skills__group">
+                        <div class="skills__data">
+                           <i class="bx bxs-badge-check"></i>
+
+                           <div>
+                              <h3 class="skills__name">Bootstrap</h3>
+                              <span class="skills__level">Intermediate</span>
+                           </div>
+                        </div>
+
+                        <div class="skills__data">
+                           <i class="bx bxs-badge-check"></i>
+
+                           <div>
+                              <h3 class="skills__name">React</h3>
+                              <span class="skills__level">Intermediate</span>
+                           </div>
+                        </div>
+
+                        <div class="skills__data">
+                           <i class="bx bxs-badge-check"></i>
+
+                           <div>
+                              <h3 class="skills__name">Tailwind</h3>
+                              <span class="skills__level">Intermediate</span>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+               <div class="skills__content">
+                  <h3 class="skills__title">Backend Developer</h3>
+
+                  <div class="skills__box">
+                     <div class="skills__group">
+                        <div class="skills__data">
+                           <i class="bx bxs-badge-check"></i>
+
+                           <div>
+                              <h3 class="skills__name">Python</h3>
+                              <span class="skills__level">Intermediate</span>
+                           </div>
+                        </div>
+
+                        <div class="skills__data">
+                           <i class="bx bxs-badge-check"></i>
+
+                           <div>
+                              <h3 class="skills__name">Node Js</h3>
+                              <span class="skills__level">Basic</span>
+                           </div>
+                        </div>
+
+                        <div class="skills__data">
+                           <i class="bx bxs-badge-check"></i>
+
+                           <div>
+                              <h3 class="skills__name">Express Js</h3>
+                              <span class="skills__level">Intermediate</span>
+                           </div>
+                        </div>
+                     </div>
+
+                     <div class="skills__group">
+                        <div class="skills__data">
+                           <i class="bx bxs-badge-check"></i>
+
+                           <div>
+                              <h3 class="skills__name">MySQL</h3>
+                              <span class="skills__level">Intermediate</span>
+                           </div>
+                        </div>
+
+                        <div class="skills__data">
+                           <i class="bx bxs-badge-check"></i>
+
+                           <div>
+                              <h3 class="skills__name">Django</h3>
+                              <span class="skills__level">Intermediate</span>
+                           </div>
+                        </div>
+
+                        <div class="skills__data">
+                           <i class="bx bxs-badge-check"></i>
+
+                           <div>
+                              <h3 class="skills__name">React</h3>
+                              <span class="skills__level">Intermediate</span>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </section>
+
          <!--=============== SERVICES ===============-->
+
          <section class="services section">
             <span class="section__subtitle">My Services</span>
             <h2 class="section__title">What I Offer</h2>
@@ -209,7 +354,7 @@
             <div class="services__container container grid">
                <div class="services__card">
                   <h3 class="services__title">
-                     Frontend <br/>
+                     Frontend <br />
                      Design
                   </h3>
 
@@ -223,7 +368,8 @@
 
                         <h3 class="services__modal-title">Frontend Development</h3>
                         <p class="services__modal-description">
-                           Offering more than 1 year of experience in delivering quality frontend development services for clients and companies.
+                           Offering more than 1 year of experience in delivering quality frontend development services
+                           for clients and companies.
                         </p>
 
                         <ul class="services__modal-list">
@@ -280,7 +426,8 @@
 
                         <h3 class="services__modal-title">Backend Development</h3>
                         <p class="services__modal-description">
-                           With over 1 year of experience, I provide quality backend development services to clients and businesses.
+                           With over 1 year of experience, I provide quality backend development services to clients and
+                           businesses.
                         </p>
 
                         <ul class="services__modal-list">
@@ -337,7 +484,8 @@
 
                         <h3 class="services__modal-title">Fullstack Development</h3>
                         <p class="services__modal-description">
-                           Offering over 1 year of experience, I deliver comprehensive fullstack development services to clients and companies.
+                           Offering over 1 year of experience, I deliver comprehensive fullstack development services to
+                           clients and companies.
                         </p>
 
                         <ul class="services__modal-list">
@@ -350,7 +498,8 @@
 
                            <li class="services__modal-item">
                               <i class="bx bx-check services__modal-icon"></i>
-                              <p class="services__modal-info">I build integrated web applications from start to finish.</p>
+                              <p class="services__modal-info">I build integrated web applications from start to finish.
+                              </p>
                            </li>
 
                            <li class="services__modal-item">
@@ -382,6 +531,7 @@
 
 
          <!--=============== WORK ===============-->
+
          <section class="work section" id="work">
             <span class="section__subtitle">My Portfolio</span>
             <h2 class="section__title">Recent Works</h2>
@@ -439,7 +589,8 @@
 
                   <h3 class="work__title">genAI Chatbot</h3>
 
-                  <a target="_blank" href="https://genai-chat.onrender.com/" class="work__button">Demo <i class="bx bx-right-arrow-alt work__icon"></i>
+                  <a target="_blank" href="https://genai-chat.onrender.com/" class="work__button">Demo <i
+                        class="bx bx-right-arrow-alt work__icon"></i>
                   </a>
                </div>
 
@@ -563,6 +714,7 @@
          </section>
 
          <!--=============== CONTACT ===============-->
+
          <section class="contact section" id="contact">
             <span class="section__subtitle">Get in touch</span>
             <h2 class="section__title">Contact Me</h2>
@@ -637,6 +789,7 @@
       </main>
 
       <!--=============== FOOTER ===============-->
+
       <footer class="footer">
          <div class="footer__container container">
             <h1 class="footer__title">Shakeb Shamsi</h1>
