fix: work-conatiner

--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@
                </div>
 
                <div class="work__card mix react">
-                  <img src="./assets/img/gitlookup.png" alt="" class="work__img" />
+                  <img src="./assets/img/gitlookup.png" alt="" class="work__img git__img" />
 
                   <h3 class="work__title">Git-Lookup Tool</h3>
 
@@ -585,7 +585,7 @@
                </div>
 
                <div class="work__card mix react">
-                  <img src="./assets/img/genAIchat.png" alt="" class="work__img" />
+                  <img src="./assets/img/genAIchat.png" alt="" class="work__img genai__img" />
 
                   <h3 class="work__title">genAI Chatbot</h3>
 
@@ -605,7 +605,7 @@
                </div>
 
                <div class="work__card mix react">
-                  <img src="./assets/img/evERA.png" alt="" class="work__img" />
+                  <img src="./assets/img/evERA.png" alt="" class="work__img evera__img" />
 
                   <h3 class="work__title">evERA</h3>
 
@@ -625,7 +625,7 @@
                </div>
 
                <div class="work__card mix vanilla">
-                  <img src="./assets/img/quiz-app.png" alt="" class="work__img" />
+                  <img src="./assets/img/quiz-app.png" alt="" class="work__img quiz__img" />
 
                   <h3 class="work__title">Interactive Quiz App</h3>
 
