FIX: nav highlight nav logo

--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
 
       <header class="header" id="header">
          <nav class="nav container">
-            <a href="" class="nav__logo">Shakeb</a>
+            <a href="" class="nav__logo">
+               <h1 class="nav__logo">Shakeb</h1>
+            </a>
             <div class="nav__menu">
                <ul class="nav__list">
                   <li class="nav__item">
