Tag Added : Google Search Console

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
       <meta property="og:site_name" content="https://www.shakeb.tazheeb.com/" />
       <meta name="keywords"
          content="shakeb, tazheeb, shamsi,shakeb hassan,shakeb hassan shamsi, shakeb shamsi, www.shakeb.tazheeb.com, shakeb shamsi,portfolio, resume, cv, portfolio website, resume website, developer, developer resume, developer website, developer portfolio, developer portfolio website, personal portfolio, personal portfolio website" />
+         //Google Search Console Verification
+      <meta name="google-site-verification" content="bd9qynVjBwd61nqwbXhrBG4wgeFA-P8LES7Z6fq9VCU" />
 
       <link rel="alternate" hreflang="en" href="/" />
       <link rel="alternate" hreflang="en-ca" href="/en_ca" />
