--- a/index.html
+++ b/index.html
@@ -815,11 +815,11 @@
                   <i class="bx bxl-facebook"></i>
                </a>
 
-               <a href="https://www.instagram.com/shakebshamsi/" target="_blank" class="footer__social-link">
+               <a href="https://www.instagram.com/devpedia.in/" target="_blank" class="footer__social-link">
                   <i class="bx bxl-instagram"></i>
                </a>
 
-               <a href="https://twitter.com/shaky_here" target="_blank" class="footer__social-link">
+               <a href="https://twitter.com/shakebshamsi" target="_blank" class="footer__social-link">
                   <i class="bx bxl-twitter"></i>
                </a>
             </ul>
