--- a/index.html
+++ b/index.html
@@ -811,7 +811,7 @@
             </ul>
 
             <ul class="footer__social">
-               <a href="https://www.facebook.com/iamshakeb/" target="_blank" class="footer__social-link">
+               <a href="https://www.facebook.com/people/DevPedia/61567832607250/" target="_blank" class="footer__social-link">
                   <i class="bx bxl-facebook"></i>
                </a>
 
